allow-gh-runner-to-mlflow-gnp.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-gh-runner-to-mlflow
spec:
  selector: "app == 'gh-runner'"    
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: "app == 'mlflow'"  
      ports:
      - 5000
